// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> renders <Grid /> component 1`] = `
.emotion-1 {
  box-sizing: border-box;
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media screen and (max-width:575px) {
  .emotion-1 {
    margin: calc(-1 * 8px) calc(-1 * 8px/2) 0 calc(-1 * 8px/2);
  }
}

@media screen and (min-width:576px) {
  .emotion-1 {
    margin: calc(-1 * 16px) calc(-1 * 16px/2) 0 calc(-1 * v16px/2);
  }
}

@media screen and (min-width:992px) {
  .emotion-1 {
    margin: calc(-1 * 24px) calc(-1 * 24px) 0 calc(-1 * 24px/2);
  }
}

@media screen and (min-width:1200px) {
  .emotion-1 {
    margin: calc(-1 * 32px) calc(-1 * 32px) 0 calc(-1 * 32px/2);
  }
}

.emotion-0 {
  box-sizing: border-box;
  padding: 8px calc(8px/2) 0 calc(8px/2);
  -webkit-flex-basis: calc(100% / (12/12));
  -ms-flex-preferred-size: calc(100% / (12/12));
  flex-basis: calc(100% / (12/12));
  width: calc(100% / (12/12));
  max-width: calc(100% / (12/12));
}

@media screen and (min-width:576px) {
  .emotion-0 {
    padding: 16px calc(16px/2) 0 calc(16px/2);
  }
}

@media screen and (min-width:992px) {
  .emotion-0 {
    padding: 24px calc(24px/2) 0 calc(24px/2);
  }
}

@media screen and (min-width:1200px) {
  .emotion-0 {
    padding: 32px calc(32px/2) 0 calc(32px/2);
  }
}

<div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      1
    </div>
  </div>
</div>
`;

exports[`<Grid /> renders <Grid /> in bleed variant 1`] = `
.emotion-1 {
  box-sizing: border-box;
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media screen and (max-width:575px) {
  .emotion-1 {
    margin: 0;
  }
}

@media screen and (min-width:576px) {
  .emotion-1 {
    margin: 0;
  }
}

@media screen and (min-width:992px) {
  .emotion-1 {
    margin: 0;
  }
}

@media screen and (min-width:1200px) {
  .emotion-1 {
    margin: 0;
  }
}

.emotion-0 {
  box-sizing: border-box;
  padding: 0;
  -webkit-flex-basis: calc(100% / (12/12));
  -ms-flex-preferred-size: calc(100% / (12/12));
  flex-basis: calc(100% / (12/12));
  width: calc(100% / (12/12));
  max-width: calc(100% / (12/12));
}

@media screen and (min-width:576px) {
  .emotion-0 {
    padding: 0;
  }
}

@media screen and (min-width:992px) {
  .emotion-0 {
    padding: 0;
  }
}

@media screen and (min-width:1200px) {
  .emotion-0 {
    padding: 0;
  }
}

<div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      grid
    </div>
    222
  </div>
</div>
`;
